Day 3 WIP trying different solution